# editor

./: .gitignore  .lvimrc  Cargo.toml  Makefile  build.rs  build_windows.sh  build_windows_release.sh  plan.md  run.sh
crates/cbmap/: Cargo.toml
crates/cbmap/src/: lib.rs  markup.rs  material.rs
crates/editor-protocol/: Cargo.toml
crates/editor-protocol/src/: lib.rs
crates/font-atlas/: Cargo.toml
crates/font-atlas/examples/: basic_atlas.rs  basic_char.rs
crates/font-atlas/src/: lib.rs
crates/font-atlas/src/cache/: mod.rs
crates/font-atlas/src/glyph_packer/: buffer2d.rs  mod.rs  packer.rs  rect.rs  skyline_packer.rs
crates/font-atlas/src/rasterize/: mod.rs
crates/miniquad/native/sapp-linux/: build.rs
crates/miniquad/native/sapp-linux/src/: lib.rs  x.rs
crates/miniquad/native/sapp-windows/src/: lib.rs
crates/miniquad/src/graphics/: texture.rs
crates/realtime-drawing/: Cargo.toml
crates/realtime-drawing/examples/: demo.rs
crates/realtime-drawing/src/: lib.rs  miniquad_batch.rs
crates/rimui/: .lvimrc  Cargo.toml  Makefile
crates/rimui/examples/: demo.rs
crates/rimui/res/fonts/: BloggerSans.ttf-21.font
crates/rimui/src/: font_manager.rs  lib.rs  miniquad_render.rs  text_editor.rs
res/fonts/: BloggerSans.ttf-16.font  BloggerSans.ttf-64.font
res/maps/: City.cbmap  City.js  Feature_Plants.cbmap  Race.cbmap  Race_At.cbmap  Race_Boost.cbmap  Race_Goggles.cbmap  Race_Mushroom.cbmap  Race_Spiral.cbmap
src/: app.rs  document.rs  field.rs  graph.rs  graphics.rs  grid.rs  grid_segment_iterator.rs  interaction.rs  main.rs  material.rs  math.rs  mouse_operation.rs  net_client_connection.rs  plant.rs  profiler.rs  sdf.rs  some_or.rs  tool.rs  tunnel.rs  ui.rs  undo_stack.rs  zip_fs.rs  zone.rs
