[package]
name = "editor"
version = "0.1.0"
edition = "2018"
authors = ["koalefant <koalefant@fastmail.com>"]

[dependencies]
rimui = { path = "crates/rimui" }
cbmap = { path = "crates/cbmap" }
realtime-drawing = { path="crates/realtime-drawing" }
glam = { version="0.18", features=["serde"] }
miniquad = "0.3.0-alpha.30"
png = "0.16.8"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
bincode = "1.3.3"
nfd2 = "0.3.0"
anyhow = "1.0.43"
log = "0.4.14"
directories = "3.0.2"
earcutr = "0.2.0"
simple_logger = "1.13.0"
itertools = "0.10.1"
zip = { version = "0.5.13", default-features = false, features = ["time", "deflate"] }
slotmap = { version = "1.0.6", features = ["serde"] }