[package]
name = "editor"
version = "0.1.1"
edition = "2021"
authors = ["koalefant <koalefant@fastmail.com>"]
[build-dependencies]
anyhow = "1.0.44"
glob = "0.3.0"
walkdir = "2.3.1"
zip = { version = "0.5.8", default-features = false, features = ["time", "deflate"] }
font-atlas = { path = "crates/font-atlas" }
serde = { version = "1.0.116", features = ["derive", "rc"] }
serde_derive = "1.0.116"
serde_json = "1.0.57"
which = "4.0.2"
image = { version = "0.23.9", default-features = false, features = ["png"] }

[dependencies]
rimui = { path = "crates/rimui" }
cbmap = { path = "crates/cbmap" }
realtime-drawing = { path="crates/realtime-drawing" }
glam = { version="0.18", features=["serde"] }
miniquad = { path="crates/miniquad" }
png = "0.16.8"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.67"
bincode = "1.3.3"
nfd2 = "0.3.0"
anyhow = "1.0.43"
log = "0.4.14"
directories = "3.0.2"
earcutr = "0.2.0"
simple_logger = "1.13.0"
zip = { version = "0.5.13", default-features = false, features = ["time", "deflate"] }
slotmap = { version = "1.0.6", features = ["serde"] }
zerocopy = "0.6.0"
rayon = "1.5.1"
ordered-float = { version = "2.8.0", features = ["serde"] }
ureq = { version = "2.3", features = [] }
