[package]
name = "realtime-drawing"
version = "0.1.0"
authors = ["koalefant <koalefant@fastmail.com>"]
edition = "2018"

[features]
default = ["miniquad_batch"]
miniquad_batch = ["miniquad"]

[dependencies]
glam = "0.18"
miniquad = { path = "../miniquad", optional=true }

[dev-dependencies]
miniquad = { path = "../miniquad" }

[lib]
name = "realtime_drawing"
