[package]
name = "rimui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realtime-drawing = { path="../realtime-drawing" }
slotmap = "1.0"
serde = "*"
serde_derive = "*"
serde_json = "*"
glam = { version="0.18" }
log = "*"
miniquad = "0.3.0-alpha.30"
png = "*"

[dev-dependencies]
